init swaggo/swag ; helps to make swagger docs
