# docs/swagger.json
@@ -1,8 +1,73 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {},
+        "contact": {
+            "name": "readytowork",
+            "url": "http://readytowork.jp",
+            "email": "redaytowork@info.jp"
+        },
         "license": {}
     },
-    "paths": {}
+    "paths": {
+        "/posts/create": {
+            "post": {
+                "description": "Add Posts",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Add Posts",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name search by q",
+                        "name": "q",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Post"
+                            }
+                        },
+                        "headers": {
+                            "Token": {
+                                "type": "string",
+                                "description": "qwerty"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "model.Post": {
+            "type": "object",
+            "required": [
+                "Description",
+                "Title"
+            ],
+            "properties": {
+                "Description": {
+                    "type": "string"
+                },
+                "Title": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
